# immortal

./: Cargo.toml  README.md  immortal-ee7b5fb0698b446.js  immortal-ee7b5fb0698b446_bg.wasm  index.html  style-25a64db187b3421c.css
.github/workflows/: continuous_deployment.yml
src/: main.rs
