[package]
name = "immortal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
yew = { version = "0.20", features = ["csr"] }
gloo = "0.8"
base64 = "0.21.0"

[profile.release]
opt-level = 2 # fast and small wasm